Table is now generating in itnerary

--- a/force-app/main/default/classes/SummitEventsAppointmentTriggerHandler.cls
+++ b/force-app/main/default/classes/SummitEventsAppointmentTriggerHandler.cls
@@ -23,50 +23,63 @@ public with sharing class SummitEventsAppointmentTriggerHandler {
             }
         }
 
-        If (uniqueRegistrationIds.size() > 0) {
-            allAppointments = [
-                    SELECT Id, Name, Appointment_Time__c, Appointment_Time_Formatted__c, Event_Registration__r.Id, Event_Registration__r.Event_Name__c, Appointment_Status__c,
-                            Faculty_Staff_Member__c, Appointment_Title__c, Event_Host__c, Host_Name__c, Event_Host__r.Assigned__c,
-                            Host_Location__c, Building__c, Room__c, Event_Host__r.Time__c, Event_Host__r.Course_Name__c, Event_Host__r.RecordType.Name,
-                            Chosen_State__c, Description__c, Do_Not_Show_Time__c, Sort_Order__c, Appointment_Virtual_Meeting_URL__c,
-                            Event_Appointment_Type__r.Summit_Events__c, Appointment_Category__c, Appointment_Date__c, Appointment_Detail__c,
-                            Appointment_Type__c, Class_Title__c, Registrant_Input__c
-                    FROM Summit_Events_Appointments__c
-                    WHERE Event_Registration__r.Id IN :uniqueRegistrationIds
-                    ORDER BY Appointment_Time__c ASC, Event_Host__r.Time__c ASC, Sort_Order__c, Appointment_Title__c ASC
+        if (uniqueRegistrationIds.size() > 0) {
 
-                    //TODO: If there is no time on the appointment and there is host time use the host time.
-            ];
+            String namespace = SummitEventsNamespace.getNamespace();
+            if (String.isNotBlank(namespace)) {
+                namespace = namespace.toLowerCase() + '__';
+            }
 
+            //Get the all query fields from global picklist
+            String appointmentFields = getAppointmentQueryFields();
 
-            List<Summit_Events_Registration__c> newItineraryRegs = new List<Summit_Events_Registration__c>();
-
-            String generatedItinerary = '';
-            String generatedAppointment = '';
-            String tableHead = '';
-            String tableHead2 = '';
-            //Is there time in any of the itinerary so we should show the time column?
-            Boolean appointmentsHaveTime = false;
-            Boolean appointmentsHaveLocation = false;
-            Boolean appointmentsHaveHost = false;
-            Boolean appointmentsHaveMeet = false;
-
+            try {
+                String query = 'SELECT Id, Name, ';
+                query += namespace + 'Appointment_Time__c,';
+                query += namespace + 'Event_Registration__r.Id, ';
+                query += namespace + 'Event_Registration__r.' + namespace + 'Event_Name__c, ';
+                query += namespace + 'Appointment_Status__c, ';
+                query += namespace + 'Chosen_State__c,  ';
+                query += namespace + 'Do_Not_Show_Time__c, ';
+                query += namespace + 'Sort_Order__c, ';
+                query += namespace + 'Event_Appointment_Type__r.' + namespace + 'Summit_Events__c, ';
+                query += namespace + 'Event_Registration__r.' + namespace + 'Event__c,';
+                //TODO: Maybe surface up host information on appointment record with formula
+                query += namespace + 'Event_Host__c, ';
+                query += namespace + 'Event_Host__r.' + namespace + 'Assigned__c, ';
+                query += namespace + 'Event_Host__r.' + namespace + 'Time__c, ';
+                query += namespace + 'Event_Host__r.' + namespace + 'Course_Name__c, ';
+                query += namespace + 'Event_Host__r.RecordType.Name, ';
+                query += appointmentFields + ' ';
+                query += 'FROM ' + namespace + 'Summit_Events_Appointments__c ';
+                query += 'WHERE ' + namespace + 'Event_Registration__r.Id IN :uniqueRegistrationIds ';
+                query += 'ORDER BY ' + namespace + 'Appointment_Time__c ASC, ';
+                query += namespace + 'Event_Host__r.' + namespace + 'Time__c ASC, ';
+                query += namespace + 'Sort_Order__c, ';
+                query += namespace + 'Appointment_Title__c ASC ';
+                allAppointments = Database.query(query);
+            } catch (DmlException dmlExc) {
+                System.debug(dmlExc.getMessage());
+            } catch (Exception e) {
+                System.debug(e.getMessage());
+            }
 
             if (allAppointments.size() > 0) {
-                List<String> packagedItineraryFields = new List<String>{
-                        'Appointment_Category__c', 'Appointment_Date__c', 'Appointment_Detail__c', 'Appointment_Time_Formatted__c', 'Appointment_Title__c',
-                        'Appointment_Type__c', 'Appointment_Virtual_Meeting_URL__c', 'Building__c', 'Class_Title__c', 'Description__c', 'Faculty_Staff_Member__c',
-                        'Host_Location__c', 'Host_Name__c', 'Registrant_Input__c', 'Room__c'
-                };
+
                 Map<Id, List<Summit_Events_Appointments__c>> appointmentListByRegistration = new Map<Id, List<Summit_Events_Appointments__c>>();
                 //Get event itinerary generating parameters
                 Set<Id> eventIds = new Set<Id>();
                 for (Summit_Events_Appointments__c appointment : allAppointments) {
                     eventIds.add(appointment.Event_Appointment_Type__r.Summit_Events__c);
                 }
+
+                Map<Id, Summit_Events__c> eventItinerarySetup = new Map<Id, Summit_Events__c>();
                 if (eventIds.size() > 0) {
-                    Map<Id, Summit_Events__c> eventItinerarySetup = new Map<Id, Summit_Events__c>([
-                            SELECT Id, Itinerary_Item_1__c
+                    eventItinerarySetup = new Map<Id, Summit_Events__c>([
+                            SELECT Id, Itinerary_Item_1__c, Itinerary_Item_2__c, Itinerary_Item_3__c, Itinerary_Item_4__c, Itinerary_Item_5__c,
+                                    Itinerary_Item_Style_1__c, Itinerary_Item_Style_2__c, Itinerary_Item_Style_3__c, Itinerary_Item_Style_4__c, Itinerary_Item_Style_5__c,
+                                    Itinerary_Table_Head_Or_Title_1__c, Itinerary_Table_Head_Or_Title_2__c, Itinerary_Table_Head_Or_Title_3__c,
+                                    Itinerary_Table_Head_Or_Title_4__c, Itinerary_Table_Head_Or_Title_5__c
                             FROM Summit_Events__c
                             WHERE Id IN :eventIds
                     ]);
@@ -74,38 +87,124 @@ public with sharing class SummitEventsAppointmentTriggerHandler {
 
                 for (Summit_Events_Appointments__c appointment : allAppointments) {
                     if (appointmentListByRegistration.containsKey(appointment.Event_Registration__r.Id)) {
-                        List<Summit_Events_appointments__c> preexistingAppointments = appointmentListByRegistration.get(appointment.Event_Registration__c);
+                        List<Summit_Events_Appointments__c> preexistingAppointments = appointmentListByRegistration.get(appointment.Event_Registration__r.Id);
                         preexistingAppointments.add(appointment);
                         appointmentListByRegistration.put(appointment.Event_Registration__c, preexistingAppointments);
 
                     } else {
                         List<Summit_Events_Appointments__c> newAppointments = new List<Summit_Events_Appointments__c>();
                         newAppointments.add(appointment);
-                        appointmentListByRegistration.put(appointment.Event_Registration__c, newAppointments);
+                        appointmentListByRegistration.put(appointment.Event_Registration__r.Id, newAppointments);
                     }
                 }
 
-                if (appointmentListByRegistration.size() > 0) {
-                    List<Summit_Events_Registration__c> registrationsWithItineraries = new List<Summit_Events_Registration__c>();
-                    for (List<Summit_Events_Appointments__c> registrationAppointments : appointmentListByRegistration.values()) {
-                        if (registrationAppointments.size() > 0) {
-                            Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
-                            registration.Id = registrationAppointments[0].Event_Registration__c;
-                            String requestedAppointments = '';
-                            String confirmedAppointments = '';
-                            for (Summit_Events_Appointments__c apt : registrationAppointments) {
+                List<Summit_Events_Registration__c> registrationsWithItineraries = new List<Summit_Events_Registration__c>();
+                for (Id eventRegKey : appointmentListByRegistration.keySet()) {
+
+                    List<Summit_Events_Appointments__c> apptList = appointmentListByRegistration.get(eventRegKey);
+                    Summit_Events_Registration__c registration = new Summit_Events_Registration__c(Id = eventRegKey);
+                    String requestedAppointments = '';
+                    String confirmedAppointments = '';
+
+                    Boolean openTd = false;
+                    String tableHead = '';
+                    Boolean tableEvaluated = false;
+
+                    for (Summit_Events_Appointments__c apt : apptList) {
+
+                        Summit_Events__c itineraryStyle = eventItinerarySetup.get(apt.Event_Appointment_Type__r.Summit_Events__c);
+
+                        if (!tableEvaluated) {
+                            for (Integer i = 1; i < 6; i++) {
+                                if (itineraryStyle.get(namespace + 'itinerary_Item_Style_' + i + '__c') != null) {
+                                    String headerCheck = (String) itineraryStyle.get(namespace + 'itinerary_Item_Style_' + i + '__c');
+                                    if (headerCheck.equalsIgnoreCase('Has table row header')) {
+                                        String headText = '';
+                                        if (itineraryStyle.get(namespace + 'itinerary_Table_Head_Or_Title_' + i + '__c') != null) {
+                                            headText = (String) itineraryStyle.get(namespace + 'itinerary_Table_Head_Or_Title_' + i + '__c');
+                                        }
+                                        tableHead += '<th align="left" style="text-align:left; font-family:arial; font-size:12pt; color:#000000;">' + headText + '</th>';
+                                    }
+                                }
+                            }
+                            if (String.isNotBlank(tableHead)) {
+                                tableHead = '<tr>' + tableHead + '</tr>';
+                            }
+                            tableEvaluated = true;
+                        }
+
+
+                        for (Integer i = 1; i < 6; i++) {
+
+                            String appointmentField = '';
+                            if (itineraryStyle.get(namespace + 'itinerary_Item_' + i + '__c') != null) {
+                                appointmentField = (String) itineraryStyle.get(namespace + 'itinerary_Item_' + i + '__c');
+                            }
+                            String appointmentStyle = '';
+                            if (itineraryStyle.get(namespace + 'itinerary_Item_Style_' + i + '__c') != null) {
+                                appointmentStyle = (String) itineraryStyle.get(namespace + 'itinerary_Item_Style_' + i + '__c');
+                            }
+                            String appointmentHead = '';
+                            if (itineraryStyle.get(namespace + 'itinerary_Table_Head_Or_Title_' + i + '__c') != null) {
+                                appointmentHead = (String) itineraryStyle.get(namespace + 'itinerary_Table_Head_Or_Title_' + i + '__c');
+                            }
+                            String fieldValue = '';
+                            if (apt.get(appointmentField) != null) {
+                                fieldValue = String.valueOf(apt.get(appointmentField));
 
                             }
-                            registration.Generated_Itinerary__c = confirmedAppointments;
-                            registration.Generated_Requested_Appointments__c = requestedAppointments;
-                            registrationsWithItineraries.add(registration);
+
+                            if (appointmentStyle.equalsIgnoreCase('Has table row header')) {
+                                if (openTd) {
+                                    fieldValue = '</td><td style="vertical-align:top; text-align:left; font-family:arial,sans-serif; font-size:12pt; color:#000000; padding-top:5px; padding-bottom:10px; padding-left:15px;"> ' + fieldValue;
+                                } else {
+                                    fieldValue = '<td style="vertical-align:top; text-align:left; font-family:arial,sans-serif; font-size:12pt; color:#000000; padding-top:5px; padding-bottom:10px; padding-left:15px;"> ' + fieldValue;
+                                }
+                                openTd = true;
+                            }
+
+                            requestedAppointments += fieldValue;
+
+                            //Get field type to cast correctly
+//                            SObjectType r = ((SObject) (Type.forName('Schema.' + namespace + 'Summit_Events_Appointments__c').newInstance())).getSObjectType();
+//                            DescribeSObjectResult d = r.getDescribe();
+//                            Schema.DisplayType fieldDataType = d.fields.getMap().get(appointmentField).getDescribe().getType();
+                            if (i == 5 && String.isNotBlank(tableHead)) {
+                                if (openTd) {
+                                    requestedAppointments = requestedAppointments + '</td>';
+                                    openTd = false;
+                                }
+                                requestedAppointments = '<tr>' + requestedAppointments + '</tr>';
+                            }
                         }
+
                     }
 
+
+                    if (String.isNotBlank(tableHead)) {
+                        requestedAppointments = '<table border="0" cellpadding="10" cellspacing="0">' + tableHead + requestedAppointments + '</table>';
+                    }
+                    registration.Generated_Itinerary__c = confirmedAppointments;
+                    registration.Generated_Requested_Appointments__c = requestedAppointments;
+                    registrationsWithItineraries.add(registration);
                 }
 
+                if (registrationsWithItineraries.size() > 0) {
+                    doCRUD CRUDtoDo = new doCRUD();
+                    CRUDtoDo.updateRegistration(registrationsWithItineraries);
+                }
 
+/*
                 // Generate itinaries
+                String generatedItinerary = '';
+                String generatedAppointment = '';
+                String tableHead = '';
+                String tableHead2 = '';
+                //Is there time in any of the itinerary so we should show the time column?
+                Boolean appointmentsHaveTime = false;
+                Boolean appointmentsHaveLocation = false;
+                Boolean appointmentsHaveHost = false;
+                Boolean appointmentsHaveMeet = false;
 
                 //Is there time in any of the itinerary so we should show the time column?
 
@@ -226,12 +325,12 @@ public with sharing class SummitEventsAppointmentTriggerHandler {
 
 
                         generatedAppointment += allAppointments[i].Appointment_Title__c;
-                        /* + ' - ';
+                        *//* + ' - ';
                     if (!String.isBlank(AllAPpts[i].Description__c)) {
                         generatedAppts += AllAPpts[i].Description__c + ' - ';
                     }
                     generatedAppts = generatedAppts.removeEnd(' - ');
-                    */
+                    *//*
 
 
                         generatedAppointment += '</td>';
@@ -260,8 +359,39 @@ public with sharing class SummitEventsAppointmentTriggerHandler {
                 doCRUD CRUDtoDo = new doCRUD();
                 CRUDtoDo.updateRegistration(newItineraryRegs);
             }
+
+            */
+            }
         }
 
+    }
+
+    public static String getAppointmentQueryFields() {
+        List<String> picklists = new List<String>();
+
+        List<String> packagedItineraryFields = new List<String>{
+                'Appointment_Category__c', 'Appointment_Date__c', 'Appointment_Detail__c', 'Appointment_Time_Formatted__c', 'Appointment_Title__c',
+                'Appointment_Type__c', 'Appointment_Virtual_Meeting_URL__c', 'Building__c', 'Class_Title__c', 'Description__c', 'Faculty_Staff_Member__c',
+                'Host_Location__c', 'Host_Name__c', 'Registrant_Input__c', 'Room__c'
+        };
+
+        String namespace = SummitEventsNamespace.getNamespace();
+        if (String.isNotBlank(namespace)) {
+            namespace = namespace.toLowerCase() + '__';
+        }
+
+        List<Schema.PicklistEntry> PicklistValues = Schema.getGlobalDescribe().get(namespace + 'Summit_Events__c').getDescribe().fields.getMap().get(namespace + 'Itinerary_Item_1__c').getDescribe().getPicklistValues();
+        for (Schema.PicklistEntry PicklistValue : PicklistValues) {
+            if (PicklistValue.getValue().endsWithIgnoreCase('__c')) {
+                if (packagedItineraryFields.contains(PicklistValue.getValue())) {
+                    picklists.add(namespace + PicklistValue.getValue());
+                } else {
+                    picklists.add(PicklistValue.getValue());
+                }
+            }
+        }
+        String queryFields = String.join(picklists, ', ');
+        return queryFields;
     }
 
     private without sharing class doCRUD {
