If description ends in paragraph tag don't do another br in itinerary

--- a/force-app/main/default/classes/SummitEventsAppointmentTriggerHandler.cls
+++ b/force-app/main/default/classes/SummitEventsAppointmentTriggerHandler.cls
@@ -146,10 +146,13 @@ public with sharing class SummitEventsAppointmentTriggerHandler {
 
                                 if (String.isNotBlank(fieldValue)) {
                                     confirmedAppointments += fieldValue;
+                                    if(!fieldValue.endsWithIgnoreCase('</p>')) {
+                                        confirmedAppointments += '<br/>';
+                                    }
                                 }
 
                                 if (i == 5) {
-                                    confirmedAppointments += '<br/><br/>';
+                                    confirmedAppointments += '<br/>';
                                 }
                             }
                         }
